--- a/game.html
+++ b/game.html
@@ -43,7 +43,7 @@
 				function display()
 				{
 					text.innerHTML = msg;
-					characterStats.innerHTML = "HUNGER: " + "<progress id = 'hunger'" + " value= " + hunger + " max = 100" + ">" + "</progress>" + "</br>" + "ENEGRY: " + "<progress id = 'energy'" + " value= " + energy + " max = 100" + ">" + "</progress>" + "</br>" + "HEALTH: " + "<progress id = 'health'" + " value= " + health + " max = 100" + ">" + "</progress>"  + "</br>" + "MONEY: " + "$ " + money;							
+					characterStats.innerHTML = "HUNGER: " + "<progress id = 'hunger'" + " value= " + hunger + " max = 100" + ">" + "</progress>" + "</br>" + "ENERGY: " + "<progress id = 'energy'" + " value= " + energy + " max = 100" + ">" + "</progress>" + "</br>" + "HEALTH: " + "<progress id = 'health'" + " value= " + health + " max = 100" + ">" + "</progress>"  + "</br>" + "MONEY: " + "$ " + money;							
 					characterAge.innerHTML = "Age: " + age;
 				}
 				
