--- a/Game of Life/customcharacter.html
+++ b/Game of Life/customcharacter.html
@@ -61,7 +61,7 @@
 	<body onload = "initialize();">
 		<div id = "charSelect" >
 			<img id = "charImg" onclick = "randomizeGender();" /> 
-		</div>
+		</div><br/>
 		
 		<form method = "get" action = "game.html">
 		First Name: <input id = "first" type = "text" name = "first"/>
