--- a/Game of Life/index.html
+++ b/Game of Life/index.html
@@ -13,7 +13,7 @@
 	</head>
 	<body onload = "initialize();">
 		<link href='http://fonts.googleapis.com/css?family=Oleo+Script' rel='stylesheet' type='text/css'>
-		<p id = "title">Game of Life</p>
+		<p id = "title">Game of Life</p></br>
 		<link href='http://fonts.googleapis.com/css?family=Merienda+One' rel='stylesheet' type='text/css'>
 		<p class = "intro">Welcome to the Game of Life, where your ultimate goal is to live to age 100.<br/>
 		You will have various choices throughout your life. Every choice you make is significant.<br/>
