--- a/customcharacter.html
+++ b/customcharacter.html
@@ -2,8 +2,8 @@
 <!-- Catelen Wu, Darren Chan, Kyle Tam -->
 <html>
 	<head>
-		<title>Life Game</title>
-		<link rel = "stylesheet" type = "text/css" href = "dressing.css"/>
+		<title>Game Of Life</title>
+		<link rel = "stylesheet" type = "text/css" href = "character.css"/>
 		<style>
 		</style>
 			<script src = "utility.js"></script> 
@@ -61,7 +61,7 @@
 	<body onload = "initialize();">
 		<div id = "charSelect" >
 			<img id = "charImg" onclick = "randomizeGender();" /> 
-		</div>
+		</div><br/>
 		
 		<form method = "get" action = "game.html">
 		First Name: <input id = "first" type = "text" name = "first"/>
