--- a/index.html
+++ b/index.html
@@ -2,18 +2,24 @@
 <!-- Catelen Wu, Darren Chan, Kyle Tam -->
 <html>
 	<head>
-		<title>Life Game</title>
-		<style>
-		</style>
-			<script>
-				function initialize()
-				{
-					
-				}
-			</script>
+		<title>Game of Life</title>
+		<link rel = "stylesheet" type = "text/css" href = "index.css"/>
+		<script>
+			function initialize()
+			{
+				
+			}
+		</script>
 	</head>
 	<body onload = "initialize();">
-		<button onclick = "startGame();"><a href = "customcharacter.html">Start</button>
+		<link href='http://fonts.googleapis.com/css?family=Oleo+Script' rel='stylesheet' type='text/css'>
+		<p id = "title">Game of Life</p></br>
+		<link href='http://fonts.googleapis.com/css?family=Merienda+One' rel='stylesheet' type='text/css'>
+		<p class = "intro">Welcome to the Game of Life, where your ultimate goal is to live to age 100.<br/>
+		You will have various choices throughout your life. Every choice you make is significant.<br/>
+		Are you ready to play?</p>
+		<link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+		<div id = "start_button" onclick = "startGame();"><a href = "customcharacter.html">Start</div>
 	</body>
 </html>
 
