--- a/Game of Life/customcharacter.html
+++ b/Game of Life/customcharacter.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>Game Of Life</title>
 		<link rel = "stylesheet" type = "text/css" href = "character.css"/>
+		<link href='http://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
 		<style>
 		</style>
 			<script src = "utility.js"></script> 
@@ -59,6 +60,7 @@
 			</script>
 	</head>
 	<body onload = "initialize();">
+		<div class = "heading">Click the image to change your character.</div>
 		<div id = "charSelect" >
 			<img id = "charImg" onclick = "randomizeGender();" /> 
 		</div><br/>
