--- a/Game of Life/game.html
+++ b/Game of Life/game.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>Game of Life</title>
 		<link rel = "stylesheet" type = "text/css" href = "dressing.css"/>
+		<link href='http://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
 		<script src = "utility.js"></script> 
 		<style>
 		</style>
@@ -449,10 +450,10 @@
 		</div> </br>-->
 		<div id = "stats"></div>
 		<div id = "textArea"></div>
-
-		<div id = "one" onclick = "choice('one');"></div>
-		<div id = "two" onclick = "choice('two');"></div>
-		<div id = "three" onclick = "choice('three');"></div>
-		
+		<div id = "choices">
+			<div id = "one" onclick = "choice('one');"></div>
+			<div id = "two" onclick = "choice('two');"></div>
+			<div id = "three" onclick = "choice('three');"></div>
+		</div>
 	</body>
 </html>
